[gd_scene load_steps=3 format=3 uid="uid://bqnf8xpvdmfr3"]

[ext_resource type="Script" path="res://Plazm.gd" id="1_gsmrt"]
[ext_resource type="PackedScene" uid="uid://b6yjujgbqgxtv" path="res://bullet_plazm.tscn" id="2_t3x0h"]

[node name="Plazm" type="Node2D"]
script = ExtResource("1_gsmrt")
bullet_scene = ExtResource("2_t3x0h")

[node name="FireTimer" type="Timer" parent="."]
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_timer_3_timeout"]
